--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,14 @@
                     <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.1</version>  <!-- Ensure this is compatible with your Java version -->
+                <configuration>
+                    
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
